// how to use? go to terminal and execute above
// protoc -I  pb/ pb/user.proto --go_out=plugins=grpc:pb/

syntax = "proto3";

package pb;

service User {
    rpc GetUser (GetUserRequest) returns (GetUserResponse) {
    }
}

message GetUserRequest {
    int32 id = 1;
}

message GetUserResponse {
    int32 id = 1;
    string nickname = 2;
    int32 super = 3;
    int32 active = 4;
    string email = 5;
    int32 groupId = 6;
}